2024-05-23T16:11:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9211367776 # 299
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-23
* notice: last 14d: unq all: 6 29
* notice: prev accum: outdated-unq outdated-all / unq all: 793 1261 / 819 1292
* notice: next accum: outdated-unq outdated-all / unq all: 795 1263 / 819 1292
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-09] / []

2024-05-23T08:11:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9204509122 # 298
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-23
* notice: last 14d: unq all: 6 30
* notice: prev accum: outdated-unq outdated-all / unq all: 793 1261 / 818 1291
* notice: next accum: outdated-unq outdated-all / unq all: 793 1261 / 819 1292
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-09 2024-05-23]

2024-05-22T16:11:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9194790007 # 296
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-22
* notice: last 14d: unq all: 6 30
* notice: prev accum: outdated-unq outdated-all / unq all: 791 1258 / 818 1290
* notice: next accum: outdated-unq outdated-all / unq all: 793 1261 / 818 1291
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-05-08] / [2024-05-22]

2024-05-22T08:12:19Z: