@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-23T16:11:39Z",
+  "timestamp" : "2024-05-24T00:40:16Z",
   "count_outdated" : 1263,
   "uniques_outdated" : 795,
-  "count" : 1292,
-  "uniques" : 819,
+  "count" : 1293,
+  "uniques" : 820,
   "clones" : [
     {
       "timestamp": "2024-05-10T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2024-05-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
