@@ -1,5 +1,5 @@
 {
-  "count": 29,
+  "count": 30,
   "uniques": 6,
   "clones": [
     {
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2024-05-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
