@@ -1,3 +1,12 @@
+2024-05-24T00:40:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9216800309 # 300
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-24
+* notice: last 14d: unq all: 6 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 795 1263 / 819 1292
+* notice: next accum: outdated-unq outdated-all / unq all: 795 1263 / 820 1293
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2024-05-23]
+
 2024-05-23T16:11:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9211367776 # 299
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-23
